--- a/templates/viewsponsors.html
+++ b/templates/viewsponsors.html
@@ -6,26 +6,18 @@
         <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h1 class="product_taital">Our athletes</h1>
+                <h1 class="product_taital">Our sponsors</h1>
                 <p class="product_text">insert text?</p>
             </div>
         </div>
         <div class="product_section_2 layout_padding">
             <div class="row">
                 <div class="col-lg-3 col-sm-6">
-                    <div class="product_box"><a href="athleteprofile">
-                    <h4 class="bursh_text">Player name</h4>
-                    <p class="lorem_text">Sport</p>
-                    <img src="images/img-1.png" class="image_1">
+                    <div class="view_box"><a href="sponsorprofile">
+                    <h4 class="bursh_text">Sponsor name</h4>
+                    <p class="lorem_text">Individual/Company</p>
+                    <img src="images/img-1.png" class="image_1_view">
                     </a>
-                    <div class="btn_main">
-                        <div class="buy_bt">
-                            <ul>
-                                <li><a href="#">Add data</a></li>
-                                <li><a href="createrequest">Add request</a></li>
-                            </ul>
-                        </div>
-                    </div>
                     </div>
                 </div>
             </div>
