--- a/templates/athleteprofile.html
+++ b/templates/athleteprofile.html
@@ -1,54 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Gray, Professional free website template</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">	
-<script language="javascript" type="text/javascript">
-function clearText(field){
+{% extends 'base.html' %}
 
-    if (field.defaultValue == field.value) field.value = '';
-    else if (field.value == '') field.value = field.defaultValue;
+{% block body %}
+<body style= "background-color:#fef4ec">
+{% endblock body %}
 
-}
-</script>
-</head>
-<head>
-	<title>{{title}}</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet" type="text/css">
-	
-	<link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/bootstrap-social.css') }}" rel="stylesheet" type="text/css">
-	<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">
-	
-</head>
-<body style= "background-color:#ffffff">
-<div id="templatemo_header_wrapper">
-
-  <div id="templatemo_header">
-    
-   	<div id="site_logo"></div>
-        
-		<div id="templatemo_menu">
-      		<div id="templatemo_menu_left"></div>
-            <ul>
-                  <li><a href="home" class="current">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Company</a></li>
-                  <li><a href="#">Contact</a></li>
-		  <li><a href="login" class="last">Login</a></li>
-            </ul>    	
-		</div> <!-- end of menu -->
-    
-    </div>  <!-- end of header -->
-</div> <!-- end of header wrapper -->
+{% block main %}
 <style>
 .text_02 {
   font-size: 18px;
@@ -59,130 +15,124 @@ function clearText(field){
 }
 
 </style>
-
     
-    <div class="row" style="position:relative;top:10%;left:20%">
-        <div class="column" style= "width:18%">
-          <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
-        </div>
-        <div class="column text_02"><br>
-          <div style="margin-bottom: 10px">Name</div>
-          <div style="margin-bottom: 10px">Age</div>
-          <div style="margin-bottom: 10px">Sport</div>
-          <div style="margin-bottom: 10px">Rank</div>
-        </div>
-      </div>
+<div class="row" style="position:relative;top:10%;left:20%">
+  <div class="column" style= "width:18%">
+    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150" style="position:relative; top:10%; left:19%">
+  </div>
+  <div class="column text_02"><br>
+    <div style="margin-bottom: 10px">Name</div>
+    <div style="margin-bottom: 10px">Age</div>
+    <div style="margin-bottom: 10px">Sport</div>
+    <div style="margin-bottom: 10px">Rank</div>
+  </div>
+</div>
  
 <br>
 
 <!-- Container for the image gallery -->
 <div class="container">
 
-    <!-- Full-width images with number text -->
-    
-    <div class="mySlides">
-      <div class="numbertext">1 / 2</div>
-        <img src="{{ url_for('static', filename='images/templatemo-bg-1.jpg') }}" style="width:100%">
+  <!-- Full-width images with number text -->
+  
+  <div class="mySlides">
+    <div class="numbertext">1 / 2</div>
+    <img src="{{ url_for('static', filename='images/templatemo-bg-1.jpg') }}" style="width:100%">
+  </div>
+
+  <div class="mySlides">
+    <div class="numbertext">2 / 2</div>
+    <img src="{{ url_for('static', filename='images/templatemo-bg-2.jpg') }}" style="width:100%">
+  </div>
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+  <!-- Image text -->
+  <div class="caption-container">
+    <p id="caption"></p>
+  </div>
+
+  <!-- Thumbnail images -->
+  <div class="row">
+    <div class="column">
+      <img class="demo cursor" src="{{ url_for('static', filename='images/templatemo-bg-1.jpg') }}" style="width:100%;height:80px;" onclick="currentSlide(1)">
     </div>
-  
-    <div class="mySlides">
-      <div class="numbertext">2 / 2</div>
-        <img src="{{ url_for('static', filename='images/templatemo-bg-2.jpg') }}" style="width:100%">
+    <div class="column">
+      <img class="demo cursor" src="{{ url_for('static', filename='images/templatemo-bg-2.jpg') }}" style="width:100%;height:80px;" onclick="currentSlide(2)">
     </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  
-    <!-- Image text -->
-    <div class="caption-container">
-      <p id="caption"></p>
-    </div>
-  
-    <!-- Thumbnail images -->
-    <div class="row">
-      <div class="column">
-         <img class="demo cursor" src="{{ url_for('static', filename='images/templatemo-bg-1.jpg') }}" style="width:100%;height:80px;" onclick="currentSlide(1)">
-      </div>
-      <div class="column">
-        <img class="demo cursor" src="{{ url_for('static', filename='images/templatemo-bg-2.jpg') }}" style="width:100%;height:80px;" onclick="currentSlide(2)">
+  </div>
+</div>
+
+
+<div class="container">
+  <div>
+    <div class="row gutters-sm">
+      <div class="card mb-3">
+        <div class="card-body">
+          <div class="col-sm-3">                
+            <div class="row">
+              <h2 class="mb-0">Achievements</h2>
+              <div class="x" style="font-size:21px">
+                xxx
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+                <h2 class="mb-0">Best Record</h2>
+                <div class="x" style="font-size:21px">
+                  xxx
+                </div>
+              </div>
+              <hr>                  
+              <div class="row">
+                <h2 class="mb-0">Coach</h2>
+                <div class="x" style="font-size:21px">
+                  xxx
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <h2 class="mb-0">Coach Contact</h2  >
+                <div class="x" style="font-size:21px">
+                  xxx
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-12">
+                  <a class="btn btn-info " target="__blank" href="athleteprofileedit" style= "font-size:16px">Edit</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  
+</div>
 
-  <div class="container">
-    <div>
-    
-          <div class="row gutters-sm">
-             <div class="col-md-8">
-              <div class="card mb-3">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-sm-3">
-                     
-                    <div class="row">
-                        <div class="col-sm-3">
-                          <h2 class="mb-0">Achievements</h2>
-                        </div>
-                        <div class="col-sm-9 text-secondary" style="font-size:21px">
-                          xxx
-                        </div>
-                     </div>
-                      <hr>
-
-                     <div class="row">
-                        <div class="col-sm-3">
-                          <h2 class="mb-0">Best Record</h2>
-                        </div>
-                        <div class="col-sm-9 text-secondary" style="font-size:21px">
-                          xxx
-                        </div>
-                      </div>
-                      <hr>
-                    
-                      <div class="row">
-                    <div class="col-sm-3">
-                      <h2 class="mb-0">Coach</h2>
-                    </div>
-                    <div class="col-sm-9 text-secondary" style="font-size:21px">
-                      xxx
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h2 class="mb-0">Coach Contact</h2  >
-                    </div>
-                    <div class="col-sm-9 text-secondary" style="font-size:21px">
-                      xxx
-                    </div>
-                  </div>
-                  <hr>
-
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <a class="btn btn-info " target="__blank" href="athleteprofileedit" style= "font-size:16px">Edit</a>
-                    </div>
-                  </div>
-                </div>
+<div class="container">
+  <div>
+    <div class="row gutters-sm">
+      <div class="card mb-3">
+        <div class="card-body">
+          <div class="col-sm-3">                
+            <div class="row">
+              <h2 class="mb-0">Coach's Comments</h2>
+              <div class="x" style="font-size:21px">
+                xxx
               </div>
-
-              
-
-
             </div>
           </div>
-
         </div>
+      </div>
     </div>
+  </div>
+</div>
 
 
-<!-- templatemo 121 simple gray -->
-<!-- 
-Simple Gray Template 
-http://www.templatemo.com/preview/templatemo_121_simple_gray 
--->
 
 <script>
     let slideIndex = 1;
@@ -217,4 +167,4 @@ http://www.templatemo.com/preview/templatemo_121_simple_gray
     
     
 </body>
-</html>
+{% endblock main %}
