--- a/templates/athleteprofileedit.html
+++ b/templates/athleteprofileedit.html
@@ -1,41 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Simple Gray, Professional free website template</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="{{ url_for('static', filename='css/templatemo_style.css') }}" rel="stylesheet" type="text/css">	
-<script language="javascript" type="text/javascript">
-function clearText(field){
+{% extends 'base.html' %}
 
-    if (field.defaultValue == field.value) field.value = '';
-    else if (field.value == '') field.value = field.defaultValue;
-
-}
-</script>
-</head>
+{% block body %}
 <body style= "background-color:#fef4ec">
-<div id="templatemo_header_wrapper">
-<!--  Free Web Templates by TemplateMo.com  -->
-  <div id="templatemo_header">
-    
-   	<div id="site_logo"></div>
-        
-		<div id="templatemo_menu">
-      		<div id="templatemo_menu_left"></div>
-            <ul>
-                  <li><a href="home" class="current">Home</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Gallery</a></li>
-                  <li><a href="#">Company</a></li>
-                  <li><a href="#">Contact</a></li>
-		  <li><a href="login" class="last">Login</a></li>
-            </ul>    	
-		</div> <!-- end of menu -->
-    
-    </div>  <!-- end of header -->
-</div> <!-- end of header wrapper -->
+{% endblock body %}
+
+{% block main %}
 <style>
 .text_02 {
   font-size: 18px;
@@ -98,72 +67,71 @@ function clearText(field){
   </div>
   
 
-  <div class="container">
-    <div>
-    
-          <div class="row gutters-sm">
-             <div class="col-md-8">
-              <div class="card mb-3">
-                <div class="card-body">
-                  <div class="row">
-                    <div class="col-sm-3">
-                     
-                    <div class="row">
-                        <div class="col-sm-3">
-                          <h2 class="mb-0">Achievements</h2>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                          <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
-                        </div>
-                     </div>
-                      <hr>
-
-                     <div class="row">
-                        <div class="col-sm-3">
-                          <h2 class="mb-0">Best Record</h2>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                          <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
-                        </div>
-                      </div>
-                      <hr>
-                    
-                      <div class="row">
-                    <div class="col-sm-3">
-                      <h2 class="mb-0">Coach</h2>
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-sm-3">
-                      <h2 class="mb-0">Coach Contact</h2  >
-                    </div>
-                    <div class="col-sm-9 text-secondary">
-                      <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
-                    </div>
-                  </div>
-                  <hr>
-
-                  <div class="row">
-                    <div class="col-sm-12">
-                      <a class="btn btn-info " target="__blank" href="athleteprofile" style= "font-size:16px">Finish</a>
-                    </div>
-                  </div>
-                </div>
+<div class="container">
+  <div>
+    <div class="row gutters-sm">
+      <div class="card mb-3">
+        <div class="card-body">
+          <div class="col-sm-3">                    
+            <div class="row">
+              <h2 class="mb-0">Achievements</h2>
+              <div class="col-sm-9 text-secondary">
+                <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
               </div>
-
-              
-
-
+            </div>
+            <hr>
+            <div class="row">
+              <h2 class="mb-0">Best Record</h2>
+              <div class="col-sm-9 text-secondary">
+                <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
+              </div>
+            </div>
+            <hr>                  
+            <div class="row">
+              <h2 class="mb-0">Coach</h2>
+              <div class="col-sm-9 text-secondary">
+                <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <h2 class="mb-0">Coach Contact</h2  >
+              <div class="col-sm-9 text-secondary">
+                <textarea name="Achievements" rows="4" cols="50">Type Here</textarea>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-12">
+                <a class="btn btn-info " target="__blank" href="athleteprofile" style= "font-size:16px">Finish</a>
+              </div>
             </div>
           </div>
-
         </div>
+      </div>
     </div>
+  </div>
+</div>
 
+
+<div class="container">
+  <div>
+    <div class="row gutters-sm">
+      <div class="card mb-3">
+        <div class="card-body">
+          <div class="col-sm-3">                
+            <div class="row">
+              <h2 class="mb-0">Coach's Comments</h2>
+              <div class="x" style="font-size:21px">
+                xxx
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- templatemo 121 simple gray -->
 <!-- 
@@ -204,4 +172,4 @@ http://www.templatemo.com/preview/templatemo_121_simple_gray
     
     
 </body>
-</html>
+{% endblock main %}
