--- a/templates/athleteprofileedit.html
+++ b/templates/athleteprofileedit.html
@@ -15,10 +15,17 @@
 }
 
 </style>
+<div class="row" style="position:relative;top:10%;left:20%;">
+  <div class="column" style= "width:80%">
+    {% if username!="" %}
+    "Welcome {{username}}
+    {% endif %}
+  </div>
+</div>
 
 <form  role="form"  action="#" method="post" enctype="multipart/form-data">
-    <div class="row" style="position:relative;top:10%;left:20%;border:2px solid red">
-        <div class="column" style= "width:30%">
+  <div class="row" style="position:relative;top:10%;left:20%;border:2px solid red">
+    <div class="column" style= "width:30%">
           <div style="margin-bottom: 10px">Enter Fullname:<input type= "text" name= "fullname" id= "fullname" placeholder="Full Name"></input></div>
           <div style="margin-bottom: 10px"><input type= "text" name= "phoneno" id= "phoneno" placeholder="Phone No"></input></div>
           <div style="margin-bottom: 10px"><input type= "email" name= "email" id= "email" placeholder="Email"></input></div>
